--- a/locallibrary/locallibrary/catalog/templates/catalog/author_detail.html
+++ b/locallibrary/locallibrary/catalog/templates/catalog/author_detail.html
@@ -5,7 +5,7 @@
 
     <p>Born: {{ author.date_of_birth }}</p>
 
-    <h3>Book List</h3>
+    <h3>Book</h3>
     <ul>
       {% for book in book_list %}
         <li>
