--- a/locallibrary/locallibrary/catalog/templates/catalog/author_list.html
+++ b/locallibrary/locallibrary/catalog/templates/catalog/author_list.html
@@ -3,12 +3,12 @@
 {% block content %}
   <h1>Author List</h1>
 
-  {% if author_list%}
+  {% if author_list %}
   <ul>
 
     {% for author in author_list %}
     <li>
-      <a href="{{ author.get_absolute_url }}">{{ author }} ({{ author.date_of_birch }})</a>
+      <a href="{{ author.get_absolute_url }}">{{ author }} ({{ author.date_of_birth}}) </a>
     </li>
     {% endfor %}
 
