--- a/locallibrary/locallibrary/catalog/templates/index.html
+++ b/locallibrary/locallibrary/catalog/templates/index.html
@@ -14,7 +14,12 @@
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
   </ul>
-
+  <form method="get">
+    <label>Search Word</label>
+    <input type="text" id="search_word" name="search_word" value="{{ search_word }}">
+    <button type="submit">Search</button>
+  </form>
+<p>Total books containing "{{ search_word }}": {{ book_count }}</p>
   <p>
     You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{%
     else %} times{% endif %}.
