--- a/locallibrary/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/locallibrary/catalog/templates/base_generic.html
@@ -31,7 +31,21 @@
                 <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
               {% endif %}
             </ul>
+
+          {% if user.is_staff %}
+             {% csrf_token %}
+             <ul class="sidebar-nav">
+               <li>Staff</li>
+               <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+               {% endif %}
+              {% if perms.catalog.add_author %}
+              <li><a href="{% url 'author-create' %}">Create author</a></li>
+              {% endif %}
+              {% if perms.catalog.add_book %}
+              <li><a href="{% url 'book-create' %}">Create book</a></li>
+            {% endif %}
           {% endblock %}
+             </ul>
         </div>
         <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
         {% block pagination %}
