--- a/locallibrary/locallibrary/catalog/templates/catalog/book_detail.html
+++ b/locallibrary/locallibrary/catalog/templates/catalog/book_detail.html
@@ -10,7 +10,7 @@
   <p><strong>Language:</strong> {{ book.language }}</p>
   <p><strong>Genre:</strong> {% for genre in book.genre.all %} {{ genre }}{% if not forloop.last %}, {% endif %}{% endfor %}</p>
 
-  <div style="margin-left:20px;margin-top:20px">
+  <div class ="book-detail">
     <h4>Copies</h4>
 
     {% for copy in book.bookinstance_set.all %}
