--- a/locallibrary/locallibrary/catalog/templates/catalog/author_detail.html
+++ b/locallibrary/locallibrary/catalog/templates/catalog/author_detail.html
@@ -1,11 +1,11 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>Author: {{ author }}</h1>
+    <h1>Автор: {{ author }}</h1>
 
-    <p>Born: {{ author.date_of_birth }}</p>
+    <p>Дата рождения: {{ author.date_of_birth }}</p>
 
-    <h3>Book</h3>
+    <h3>Книги</h3>
     <ul>
       {% for book in book_list %}
         <li>
@@ -13,7 +13,7 @@
         </li>
       <p>{{ book.summary }}</p>
       {% empty %}
-        <li>This author has no books.</li>
+        <li>У этого автора нет книг</li>
       {% endfor %}
     </ul>
 {% endblock %}c
