--- a/locallibrary/locallibrary/catalog/templates/catalog/author_form.html
+++ b/locallibrary/locallibrary/catalog/templates/catalog/author_form.html
@@ -1,11 +1,11 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <form action="" method="post">
+  <form action="" method="POST">
       {% csrf_token %}
       <table>
       {{ form.as_table }}
       </table>
-      <input type="submit" value="Submit" />
+      <input type="submit" value="Подтвердить" />
   </form>
 {% endblock %}
