--- a/locallibrary/locallibrary/catalog/templates/catalog/book_confirm_delete.html
+++ b/locallibrary/locallibrary/catalog/templates/catalog/book_confirm_delete.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<h1>Delete Book</h1>
+<h1>Удалить книгу</h1>
 
 {% if book.bookinstance_set.all %}
-<p>You can't delete this book until all copies have been deleted:</p>
+<p>Вы не сможете удалить эту книгу до тех пор, пока не будут удалены все копии:</p>
 
 <ul>
 {% for copy in book.bookinstance_set.all %}
@@ -14,11 +14,11 @@
 </ul>
 
 {% else %}
-<p>Are you sure you want to delete the book: {{ book }}?</p>
+<p>Вы уверены, что хотите удалить книгу: {{ book }}?</p>
 
 <form action="" method="POST">
   {% csrf_token %}
-  <input type="submit" action="" value="Yes, delete.">
+  <input type="submit" action="" value="Да, удалить.">
 </form>
 {% endif %}
 
