--- a/locallibrary/locallibrary/catalog/templates/catalog/bookinstance_list_borrowed_all.html
+++ b/locallibrary/locallibrary/catalog/templates/catalog/bookinstance_list_borrowed_all.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>All Borrowed Books</h1>
+    <h1>Страница взятых книг</h1>
 
     {% if bookinstance_list %}
     <ul>
@@ -9,13 +9,13 @@
       {% for bookinst in bookinstance_list %} 
       <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
         <a href="{% url 'book-detail' bookinst.book.pk %}">{{bookinst.book.title}}</a> ({{ bookinst.due_back }}) {% if user.is_staff %}-
-        {{ bookinst.borrower }}{% endif %} {% if perms.catalog.can_mark_returned %}- <a href="{% url 'renew-book-librarian' bookinst.id %}">Renew
+        {{ bookinst.borrower }}{% endif %} {% if perms.catalog.can_mark_returned %}- <a href="{% url 'renew-book-librarian' bookinst.id %}">Возобновить
         </a>  {% endif %}
       </li>
       {% endfor %}
     </ul>
 
     {% else %}
-      <p>There are no books borrowed.</p>
+      <p>Здесь нет заимствованных книг.</p>
     {% endif %}       
 {% endblock %}
