--- a/locallibrary/locallibrary/catalog/templates/catalog/bookinstance_list_borrowed_user.html
+++ b/locallibrary/locallibrary/catalog/templates/catalog/bookinstance_list_borrowed_user.html
@@ -1,19 +1,19 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>Borrowed books</h1>
+    <h1>Список взятых книг</h1>
 
     {% if bookinstance_list %}
     <ul>
 
       {% for bookinst in bookinstance_list %}
       <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
-        <a href="{% url 'book-detail' bookinst.book.pk %}">{{bookinst.book.title}}</a> ({{ bookinst.due_back }})
+        <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a> ({{ bookinst.due_back }})
       </li>
       {% endfor %}
     </ul>
 
     {% else %}
-      <p>There are no books borrowed.</p>
+      <p>Здесь нет заимствованных книг.</p>
     {% endif %}
 {% endblock %}
