--- a/locallibrary/locallibrary/catalog/templates/index.html
+++ b/locallibrary/locallibrary/catalog/templates/index.html
@@ -1,27 +1,27 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h1>Local Library Home</h1>
+<h1>Главная локальная библиотека</h1>
 
-  <p>Welcome to <em>LocalLibrary</em>, a very basic Django website developed as a tutorial example on the Mozilla Developer Network.</p>
+  <p>Добро пожаловать в <em>локальную библиотеку</em>, очень  простой веб-сайт на Django, разработанный в качестве обучающего примера в Mozilla Developer Network.</p>
 
-<h2>Dynamic content</h2>
+<h2>Динамический контент</h2>
 
-  <p>The library has the following record counts:</p>
+  <p>В библиотеке имеется следующее количество записей:</p>
   <ul>
-    <li><strong>Books:</strong> {{ num_books }}</li>
-    <li><strong>Copies:</strong> {{ num_instances }}</li>
-    <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
-    <li><strong>Authors:</strong> {{ num_authors }}</li>
+    <li><strong>Книги:</strong> {{ num_books }}</li>
+    <li><strong>Копии:</strong> {{ num_instances }}</li>
+    <li><strong>Доступные книги:</strong> {{ num_instances_available }}</li>
+    <li><strong>Авторы:</strong> {{ num_authors }}</li>
   </ul>
   <form method="get">
-    <label>Search Word</label>
+    <label>Ключевое слово</label>
     <input type="text" id="search_word" name="search_word" value="{{ search_word }}">
-    <button type="submit">Search</button>
+    <button type="submit">Найти</button>
   </form>
-<p>Total books containing "{{ search_word }}": {{ book_count }}</p>
+<p>Общее количество книг, содержащих "{{ search_word }}": {{ book_count }}</p>
   <p>
-    You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{%
+    Вы посетили эту страницу {{ num_visits }}{% if num_visits == 1 %} Время{%
     else %} times{% endif %}.
   </p>
 
