--- a/locallibrary/locallibrary/catalog/templates/registration/password_reset_confirm.html
+++ b/locallibrary/locallibrary/catalog/templates/registration/password_reset_confirm.html
@@ -2,35 +2,35 @@
 
 {% block content %}
   {% if validlink %}
-    <p>Please enter (and confirm) your new password.</p>
+    <p>Пожалуйста, введите (и подтвердите) свой новый пароль.</p>
     <form action="" method="post">
       {% csrf_token %}
       <table>
         <tr>
           <td>
             {{ form.new_password1.errors }}
-            <label for="id_new_password1">New password:</label>
+            <label for="id_new_password1">Новый пороль:</label>
           </td>
           <td>{{ form.new_password1 }}</td>
         </tr>
         <tr>
           <td>
             {{ form.new_password2.errors }}
-            <label for="id_new_password2">Confirm password:</label>
+            <label for="id_new_password2">Подтвердите пароль:</label>
           </td>
           <td>{{ form.new_password2 }}</td>
         </tr>
         <tr>
           <td></td>
-          <td><input type="submit" value="Change my password" /></td>
+          <td><input type="submit" value="Изменить мой пароль" /></td>
         </tr>
       </table>
     </form>
   {% else %}
-    <h1>Password reset failed</h1>
+    <h1>Не удалось сбросить пароль</h1>
     <p>
-      The password reset link was invalid, possibly because it has already been
-      used. Please request a new password reset.
+      Ссылка для сброса пароля была недействительной, возможно, потому, что она уже была введена
+      использованный. Пожалуйста, запросите сброс нового пароля.
     </p>
   {% endif %}
 {% endblock %}
