--- a/locallibrary/locallibrary/catalog/templates/registration/password_reset_done.html
+++ b/locallibrary/locallibrary/catalog/templates/registration/password_reset_done.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <p>
-    We've emailed you instructions for setting your password. If they haven't
-    arrived in a few minutes, check your spam folder.
+    Мы отправили вам по электронной почте инструкции по установке пароля. Если они не были отправлены
+    через несколько минут они появятся, проверьте папку со спамом.
   </p>
 {% endblock %}
